# dspy-query-wizard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COLBERT_SETUP.md  DSPy_hackathon.md  QUICKSTART.md  justfile  package-lock.json  pyproject.toml  requirements.txt
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json
backend/: app.py  evaluate.py  metrics.py  rag.py  retriever.py  train.py  train_agentic.py
backend/utils/: data_preprocess.py
dummy-backend/: index.py
dummy-backend/utils/: prompt.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.svelte  App.tsx
frontend/src/lib/: AgentChat.svelte  PromptQueryView.svelte  TokenizedTextView.svelte  types.ts
frontend/src/lib/message-parts/: README.md  ReasoningPart.svelte  TextPart.svelte  ToolCallPart.svelte  ToolCalledPart.svelte  ToolErrorPart.svelte  ToolNoStatePart.svelte  ToolResultPart.svelte  ToolStatePart.svelte  UnknownPart.svelte  index.ts
scripts/: start-colbert-server.sh  test-colbert.sh
tests/: test_agentic.py  test_api.py  test_evaluate.py  test_metrics.py  test_rag.py  test_retriever.py  test_train.py  test_train_agentic.py
